Fix sizing/spacing

--- a/ProjectSourceCode/resources/css/main-style.css
+++ b/ProjectSourceCode/resources/css/main-style.css
@@ -53,12 +53,11 @@ footer {
 
 
 .navbar-profile {
+    margin: 0px;
+    padding: 0px;
     width: 60px;
     height: 60px;
-    aspect-ratio: 1 / 1;
     border-radius: 50%;
-    object-fit: cover;
-    border: 2px solid #aaa;
 }
 
 
